# illmatic

./: .env.template  .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.template
app/: app.py  data_layer.py  illmatic.py
app/pages/: __init__.py  commodity_monitor.py  data_explorer.py  notes_drafter.py  regression_tool.py
app/views/: commodity_monitor.py  dashboard.py  data_explorer.py  notes_drafter.py  regression_tool.py  research_assistant.py  spreads.py
docs/: INSTALL.md
src/: http_utils.py  server.py
src/connectors/: bis.py  ecb.py  eia.py  eurostat.py  fred.py  imf.py  oecd.py  worldbank.py
src/tools/: notes.py  plotting.py  regression.py  transforms.py
